# online_mart_project

./: .gitignore  README.md  compose.yaml  readme.md
inventory_service/: .env  pyproject.toml
inventory_service/app/: db.py  deps.py  main.py  models.py  settings.py
inventory_service/app/consumer/: consumer_inventory.py
inventory_service/app/inventory_crud/: crud_inventory.py
inventory_service/app/proto/: inventory.proto  inventory_pb2.py
notification_service/: .env  pyproject.toml
notification_service/app/: config.py  email.py  main.py  models.py  notify.py  settings.py  sms.py
notification_service/app/consumer/: notice_consumer.py
notification_service/app/proto/: notic.py  notification.proto  notification_pb2.py
order_service/: .env  pyproject.toml
order_service/app/: deps.py  main.py  models.py  settings.py
order_service/app/consumer/: order_consumer.py
order_service/app/crud/: order_crud.py
order_service/app/proto/: order.proto  order_pb2.py
payment_service/: .env  pyproject.toml
payment_service/app/: config.py  db.py  deps.py  main.py  models.py  settings.py
payment_service/app/consumer/: payment_consumer.py
payment_service/app/crud/: payment_crud.py
payment_service/app/proto/: payment.proto  payment_pb2.py
payment_service/app/services/: payfast_service.py  stripe_service.py
product_service/: .env  Dockerfile.dev  pyproject.toml
product_service/app/: db.py  deps.py  main.py  models.py  settings.py
product_service/app/consumer/: prd_consumer.py
product_service/app/crud/: prd_crud.py
product_service/app/proto/: product.proto  product_pb2.py
user2_service/: .env  pyproject.toml
user2_service/app/: auth.py  deps.py  main.py  models.py  settings.py
user2_service/app/consumer/: user_consumer.py
user2_service/app/crud/: user_crud.py
user2_service/app/proto/: user.proto  user_pb2.py
