[tool.poetry]
name = "inventory-service"
version = "0.1.0"
description = ""
authors = ["Afsheen Shafiq <fsheekhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
httpx = "^0.27.0"
pytest = "^8.3.1"
aiokafka = "^0.11.0"
sqlmodel = "^0.0.21"
psycopg = {extras = ["binary"], version = "^3.2.1"}
protobuf = "5.28.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
